samples/_failures_safe/1761071583_490154_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df3abb2b.c: In function ‘main’:
./samples/SAFE/__tmp_df3abb2b.c:134:16: error: missing terminating " character
  134 |         printf("\nTop %d highest severity entries
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_df3abb2b.c:134:9: error: expected expression at end of input
  134 |         printf("\nTop %d highest severity entries
      |         ^~~~~~
./samples/SAFE/__tmp_df3abb2b.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df3abb2b.c:134:9: error: expected declaration or statement at end of input
